--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- HEADER SECTION -->
@@ -28,7 +28,7 @@
         <div class="home-content">
             <h3>Hi, Myself</h3>
             <h1>Brian Kimutai</h1>
-            <h3>And I'm a Frontend Developer</h3>
+            <h3>And I'm a <span>Frontend Developer</span></h3>
             <p>more on computer programing</p>
             <div class="social-media">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
