library system contents

--- a/index.html
+++ b/index.html
@@ -43,5 +43,75 @@
             <img src="112338.jpg" alt="">
         </div>
      </section> 
+     <!-- ABOUT SECTION -->
+        <section class="about" id="about">
+            <div class="about-img">
+                <img src="112338.jpg" alt="">
+            </div>
+            <div class="abot-content">
+                <h2>About <span>Me</span></h2>
+                <h3>Frontend Developer</h3>
+                <p>more on programming.</p>
+                <a href="#" class="btn">Read More</a>
+            </div> </section>
+        <!-- SERVICES SECTION -->
+        <section class="services" id="services">
+            <h2 class="heading">My <span>Services</span></h2>
+            <div class="service-container">
+                <div class="service-box">
+                    <i class="fa-solid fa-code"></i>
+                    <h3>Web Development</h3>
+                    <p>more on programming.</p>
+                    <a href="#" class="btn">Read more</a>
+                </div>
+                <div class="service-box">
+                    <i class="fa-solid fa-paintbrush"></i>
+                    <h3>Web Design</h3>
+                    <p>more on programming.</p>
+                    <a href="#" class="btn">Read more</a>
+                </div>
+                <div class="service-box">
+                    <i class="fa-solid fa-mobile-screen-button"></i>
+                    <h3>App Development</h3>
+                    <p>more on programming.</p>
+                    <a href="#" class="btn">Read more</a>
+                </div>
+            </div>
+        </section>
+        <!-- PORTFOLIO SECTION -->
+        <section class="portfolio" id="portfolio">
+            <h2 class="heading">My <span>Portfolio</span></h2>
+            <div class="portfolio-container">
+                <div class="portfolio-box">
+                    <div class="portfolio-layer">
+                        <img src="112338.jpg" alt="">
+                        <h3>Web Design</h3>
+                        <i class="fa-light fa-up-right-from-square"></i>
+                        <a href="#">
+                            <button class="bt">view project</button>
+                        </a>
+                    </div>
+                    
+                </div>
+                <div class="portfolio-box">
+                    <div class="portfolio-layer">
+                        <img src="112338.jpg" alt="">
+                        <h3>Project 2</h3>
+                        <a href="#">
+                            <button class="bt">view project</button>
+                        </a>
+                        <i class="fa-light fa-up-right-from-square"></i></div>
+                </div>
+                <div class="portfolio-box">
+                    <div class="portfolio-layer">
+                        <img src="112338.jpg" alt="">
+                        <h3>Project 3</h3>
+                        <a href="#">
+                            <button class="bt">view project</button>
+                        </a>
+                        
+                        <i class="fa-light fa-up-right-from-square"></i></div>
+                </div>
+            </div>
 </body>
 </html>
