--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <!-- HEADER SECTION -->
     <header class="header">
+        <!-- Logo -->
         <a href="#" class="logo">My Portfolio</a>
-        <i class="fa-solid fa-bars" id="menu-icon"></i> <!-- Menu icon -->
+        <!-- Menu Icon for Mobile -->
+        <i class="fa-solid fa-bars" id="menu-icon"></i>
+        <!-- Navigation Links -->
         <nav class="navbar">
             <a href="#about" class="active">About</a>
             <a href="#education">Education</a>
@@ -25,52 +28,54 @@
         </nav>
     </header>
 
-    <!-- about SECTION -->
+    <!-- ABOUT SECTION -->
     <section class="about" id="about">
         <div class="about-img">
+            <!-- About Image -->
             <img src="112338.jpg" alt="Home Image">
         </div>
         <div class="home-content">
+            <!-- About Content -->
             <h3>Hi, Myself</h3>
             <h1>Brian</h1>
             <p>
                 I am a passionate web developer with expertise in creating modern, responsive, and user-friendly websites. 
                 I specialize in front-end and back-end development, ensuring seamless user experiences.
             </p>
+            <!-- Contact Button -->
             <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
 
-    
+    <!-- EDUCATION SECTION -->
+    <section class="education" id="education">
+        <h2 class="heading">Education & <span>Background</span></h2>
+        <div class="education-container">
+            <!-- Undergraduate Education -->
+            <div class="education-item">
+                <h3>Undergraduate</h3>
+                <p><i class="fa-solid fa-school"></i> Chuka University, 2026</p>
+                <p><i class="fa-solid fa-laptop-code"></i> Computer Science</p>
+            </div>
+            <!-- High School Education -->
+            <div class="education-item">
+                <h3>High School</h3>
+                <p><i class="fa-solid fa-school"></i> Nairobi High School, 2022</p>
+                <p><i class="fa-solid fa-graduation-cap"></i> KCSE Certification</p>
+            </div>
+        </div>
+        <!-- Download CV Button -->
+        <a href="c:\Users\user\OneDrive\Desktop\my_Details\CV.docx" class="btn" download="CV.docx">Download CV</a>
+    </section>
 
-     <!-- EDUCATION SECTION -->
-            <section class="education" id="education">
-                <h2 class="heading">Education & <span>Background</span></h2>
-                <div class="education-container">
-                    <div class="education-item">
-                        <h3>Undergraduate</h3>
-                        <p><i class="fa-solid fa-school"></i> Chuka University, 2026</p>
-                        <p><i class="fa-solid fa-laptop-code"></i> Computer Science</p>
-                    </div>
-                    <div class="education-item">
-                        <h3>High School</h3>
-                        <p><i class="fa-solid fa-school"></i> Nairobi High School, 2022</p>
-                        <p><i class="fa-solid fa-graduation-cap"></i> KCSE Certification</p>
-                    </div>
-                    <!-- Add more education items if needed -->
-                </div>
-                <a href="c:\Users\user\OneDrive\Desktop\my_Details\CV.docx" class="btn" download="CV.docx">Download CV</a>
-            </section>
-
-
-    <!--INTEREST SECTION-->
+    <!-- INTERESTS SECTION -->
     <section class="interests" id="interests">
         <h2 class="h2">Professional Interests</h2>
         <div class="interests-container">
-            <!-- Left: Image -->
-            <!-- Right: Paragraph -->
             <div class="interests-content">
-                <p>   <img class="img" src="112338.jpg" alt="Home Image">
+                <!-- Interests Content -->
+                <p>
+                    <img class="img" src="112338.jpg" alt="Home Image">
                     "I'm deeply passionate about technology's power to drive innovation and solve real-world challenges. 
                     Machine learning excites me with its ability to extract insights from data and automate intelligent decisions, 
                     particularly in NLP and computer vision. Cloud computing fascinates me for its scalability and efficiency, 
@@ -80,6 +85,7 @@
                     future challenges in sustainability, security, and connectivity—all with the goal of building a smarter, more 
                     equitable digital world."
                 </p>
+                <!-- Interest Tags -->
                 <div class="interest-tags">
                     <span>Machine Learning</span>
                     <span>Web Accessibility</span>
@@ -91,147 +97,133 @@
         </div>
     </section>
 
-        <!-- SKILLS SECTION -->
-        <section class="skills" id="skills">
-            <h2 class="heading">My <span>Skills</span></h2>
-            <div class="skills-container">
-                <div class="skill-box">
-                    <h3>HTML</h3>
-                    <p>Proficient in creating semantic and accessible web pages.</p>
-                    <div class="progress-bar">
-                        <span style="width: 90%;"></span>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h3>CSS</h3>
-                    <p>Experienced in responsive design and modern CSS frameworks.</p>
-                    <div class="progress-bar">
-                        <span style="width: 85%;"></span>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h3>JavaScript</h3>
-                    <p>Skilled in building interactive and dynamic web applications.</p>
-                    <div class="progress-bar">
-                        <span style="width: 80%;"></span>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h3>React</h3>
-                    <p>Experienced in building reusable components and SPAs.</p>
-                    <div class="progress-bar">
-                        <span style="width: 75%;"></span>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h3>Node.js</h3>
-                    <p>Proficient in building scalable backend applications.</p>
-                    <div class="progress-bar">
-                        <span style="width: 70%;"></span>
-                    </div>
-                </div>
-                <div class="skill-box">
-                    <h3>Python</h3>
-                    <p>Experienced in data analysis, scripting, and automation.</p>
-                    <div class="progress-bar">
-                        <span style="width: 85%;"></span>
-                    </div>
+    <!-- SKILLS SECTION -->
+    <section class="skills" id="skills">
+        <h2 class="heading">My <span>Skills</span></h2>
+        <div class="skills-container">
+            <!-- Skill Items -->
+            <div class="skill-box">
+                <h3>HTML</h3>
+                <p>Proficient in creating semantic and accessible web pages.</p>
+                <div class="progress-bar">
+                    <span style="width: 90%;"></span>
                 </div>
             </div>
-        </section>
+            <div class="skill-box">
+                <h3>CSS</h3>
+                <p>Experienced in responsive design and modern CSS frameworks.</p>
+                <div class="progress-bar">
+                    <span style="width: 85%;"></span>
+                </div>
+            </div>
+            <div class="skill-box">
+                <h3>JavaScript</h3>
+                <p>Skilled in building interactive and dynamic web applications.</p>
+                <div class="progress-bar">
+                    <span style="width: 80%;"></span>
+                </div>
+            </div>
+            <!-- Add more skills as needed -->
+        </div>
+    </section>
 
-        <!-- SERVICES SECTION -->
-        <section class="services" id="services">
-            <h2 class="heading">My <span>Services</span></h2>
-            <div class="service-container">
-                <div class="service-box">
-                    <i class="fa-solid fa-code"></i>
-                    <h3>Web Development</h3>
-                    <p>more on programming.</p>
-                    <a href="#" class="btn">Read more</a>
-                </div>
-                <div class="service-box">
-                    <i class="fa-solid fa-paintbrush"></i>
-                    <h3>Web Design</h3>
-                    <p>more on programming.</p>
-                    <a href="#" class="btn">Read more</a>
-                </div>
-                <div class="service-box">
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                    <h3>App Development</h3>
-                    <p>more on programming.</p>
-                    <a href="#" class="btn">Read more</a>
-                </div>
+    <!-- SERVICES SECTION -->
+    <section class="services" id="services">
+        <h2 class="heading">My <span>Services</span></h2>
+        <div class="service-container">
+            <!-- Service Items -->
+            <div class="service-box">
+                <i class="fa-solid fa-code"></i>
+                <h3>Web Development</h3>
+                <p>More on programming.</p>
+                <a href="#" class="btn">Read more</a>
             </div>
-        </section>
-        <!-- PROJECT SECTION -->
-        <section class="project" id="project">
-            <h2 class="heading">My <span>Projects</span></h2>
-            <div class="project-container">
-                <div class="project-box">
-                    <img src="OIP.jpeg" alt="Web Design">
-                    <h3>Web Design</h3>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-                <div class="project-box">
-                    <img src="download.jpeg" alt="Java Project">
-                    <h3>Java Project</h3>
-                    <a href="#" class="btn">View Project</a>
-                </div>
-                <div class="project-box">
-                    <img src="OIP (1).jpeg" alt="Database">
-                    <h3>Database</h3>
-                    <a href="#" class="btn">View Project</a>
-                </div>
+            <div class="service-box">
+                <i class="fa-solid fa-paintbrush"></i>
+                <h3>Web Design</h3>
+                <p>More on programming.</p>
+                <a href="#" class="btn">Read more</a>
             </div>
-        </section>
-        <!-- CONTACT SECTION -->
-         <section class="contact" id="contact">
-            <h2 class="heading">Contact <span>Me</span></h2>
-            <div class="contact-container">
-                <!-- Left: Contact Details -->
-                <div class="contact-details">
-                    <h3>Contact Information</h3>
-                    <p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:kimutaibrian922@gmaail.com">brian@example.com</a></p>
-                    <p><i class="fa-solid fa-phone"></i> Phone: <a href="tel:+254758639632">+1234567890</a></p>
-                    <p><i class="fa-solid fa-location-dot"></i> Location: Nairobi, Kenya</p>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="https://x.com/i/flow/login"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/home?originalSubdomain=ke"><i class="fa-brands fa-linkedin"></i></a>
-                    </div>
-                </div>
+            <div class="service-box">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <h3>App Development</h3>
+                <p>More on programming.</p>
+                <a href="#" class="btn">Read more</a>
+            </div>
+        </div>
+    </section>
 
-                <!-- Right: Contact Form -->
-                <div class="input-box">
-                    <div class="input-field">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="input-field">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="input-field">
-                        <input type="text" placeholder="Your Subject" required>
-                    </div>
-                    <div class="input-field">
-                        <input type="tel" placeholder="Your Phone Number" required>
-                    </div>
-                    <div class="input-field">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send Message</button>
-                </div>
+    <!-- PROJECT SECTION -->
+    <section class="project" id="project">
+        <h2 class="heading">My <span>Projects</span></h2>
+        <div class="project-container">
+            <!-- Project Items -->
+            <div class="project-box">
+                <img src="OIP.jpeg" alt="Web Design">
+                <h3>Web Design</h3>
+                <a href="#" class="btn">View Project</a>
             </div>
-         </section>
-         <footer class="footer">
-            <div class="footer-content">
-                <p>Copyright &copy; 2024 By @BrianwebDesign | All Rights Reserved </p>
+            <div class="project-box">
+                <img src="download.jpeg" alt="Java Project">
+                <h3>Java Project</h3>
+                <a href="#" class="btn">View Project</a>
             </div>
-                <div class="footer-icon">
-                    <a href="#"><i class="fa-solid fa-angle-up"></i></a>
-                </div>
+            <div class="project-box">
+                <img src="OIP (1).jpeg" alt="Database">
+                <h3>Database</h3>
+                <a href="#" class="btn">View Project</a>
+            </div>
+        </div>
+    </section>
 
-         </footer>
+    <!-- CONTACT SECTION -->
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <div class="contact-container">
+            <!-- Left: Contact Details -->
+            <div class="contact-details">
+                <h3>Contact Information</h3>
+                <p><i class="fa-solid fa-envelope"></i> Email: <a href="mailto:brian@example.com">brian@example.com</a></p>
+                <p><i class="fa-solid fa-phone"></i> Phone: <a href="tel:+254758639632">+1234567890</a></p>
+                <p><i class="fa-solid fa-location-dot"></i> Location: Nairobi, Kenya</p>
+                <div class="social-links">
+                    <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://x.com/i/flow/login"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/home?originalSubdomain=ke"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+
+            <!-- Right: Contact Form -->
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Your Name" required>
+                </div>
+                <div class="input-field">
+                    <input type="email" placeholder="Your Email" required>
+                </div>
+                <div class="input-field">
+                    <input type="text" placeholder="Your Subject" required>
+                </div>
+                <div class="input-field">
+                    <input type="tel" placeholder="Your Phone Number" required>
+                </div>
+                <div class="input-field">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                </div>
+                <button type="submit" class="btn">Send Message</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>Copyright &copy; 2024 By @BrianwebDesign | All Rights Reserved </p>
+        </div>
+        <div class="footer-icon">
+            <a href="#"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
