--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="project-box">
                 <img src="OIP.jpeg" alt="Web Design">
                 <h3>Web Design</h3>
-                <a href="#" class="btn">View Project</a>
+                <a href="https://schoolw32.netlify.app/" class="btn">View Project</a>
             </div>
             <div class="project-box">
                 <img src="download.jpeg" alt="Java Project">
