--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         </div>
         <div class="home-content">
             <!-- About Content -->
-            <h3>Hi, Myself</h3>
-            <h1>Brian</h1>
+            <h3>Hi, I'm <span>Brian</span></h3>
+            <div class="text-animate">
+                <h3>Full Stack Developer</h3>
+            </div>
             <p>
                 I am a passionate web developer with expertise in creating modern, responsive, and user-friendly websites. 
                 I specialize in front-end and back-end development, ensuring seamless user experiences.
@@ -56,16 +58,18 @@
                 <h3>Undergraduate</h3>
                 <p><i class="fa-solid fa-school"></i> Chuka University, 2026</p>
                 <p><i class="fa-solid fa-laptop-code"></i> Computer Science</p>
+                <p>Specializing in software development and systems architecture</p>
             </div>
             <!-- High School Education -->
             <div class="education-item">
                 <h3>High School</h3>
                 <p><i class="fa-solid fa-school"></i> Nairobi High School, 2022</p>
                 <p><i class="fa-solid fa-graduation-cap"></i> KCSE Certification</p>
+                <p>KCSE Certification with focus on sciences and mathematics</p>
             </div>
         </div>
         <!-- Download CV Button -->
-        <a href="c:\Users\user\OneDrive\Desktop\my_Details\CV.docx" class="btn" download="CV.docx">Download CV</a>
+        <a href="c:\Users\user\OneDrive\Desktop\my_Details\CV.docx" class="btn" download="CV.docx">Download CV <i class="fa-solid fa-download"></i></a></a>
     </section>
 
     <!-- INTERESTS SECTION -->
@@ -76,23 +80,25 @@
                 <!-- Interests Content -->
                 <p>
                     <img class="img" src="112338.jpg" alt="Home Image">
-                    "I'm deeply passionate about technology's power to drive innovation and solve real-world challenges. 
-                    Machine learning excites me with its ability to extract insights from data and automate intelligent decisions, 
-                    particularly in NLP and computer vision. Cloud computing fascinates me for its scalability and efficiency, 
-                    enabling global deployment of powerful applications through serverless and edge computing. Equally important 
-                    is my commitment to web accessibility, ensuring inclusive digital experiences through semantic coding and ARIA 
-                    standards. Beyond these fields, I'm eager to explore emerging tech like quantum computing and IoT to tackle 
-                    future challenges in sustainability, security, and connectivity—all with the goal of building a smarter, more 
-                    equitable digital world."
+                    I'm passionate about leveraging technology to solve real-world problems. My interests span across:
                 </p>
                 <!-- Interest Tags -->
-                <div class="interest-tags">
-                    <span>Machine Learning</span>
-                    <span>Web Accessibility</span>
-                    <span>Cloud Computing</span>
-                    <span>Quantum Computing</span>
-                    <span>IoT</span>
-                </div>
+            </p>
+            <ul class="interest-list">
+                <li><i class="fa-solid fa-brain"></i> <strong>Machine Learning:</strong> Particularly NLP and computer vision applications</li>
+                <li><i class="fa-solid fa-cloud"></i> <strong>Cloud Computing:</strong> Serverless architectures and scalable solutions</li>
+                <li><i class="fa-solid fa-universal-access"></i> <strong>Web Accessibility:</strong> Creating inclusive digital experiences</li>
+                <li><i class="fa-solid fa-atom"></i> <strong>Emerging Tech:</strong> Exploring quantum computing and IoT innovations</li>
+            </ul>
+        </div>
+        <div class="interest-tags">
+            <span>AI/ML</span>
+            <span>Cloud Architecture</span>
+            <span>Web Accessibility</span>
+            <span>Full Stack Dev</span>
+            <span>Responsive Design</span>
+        </div>
+    </div>
             </div>
         </div>
     </section>
