--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!-- Download CV Button -->
-        <a href="c:\Users\user\OneDrive\Desktop\my_Details\CV.docx" class="btn" download="CV.docx">Download CV <i class="fa-solid fa-download"></i></a></a>
+        <a href="CV.docx" class="btn" download="CV.docx">Download CV <i class="fa-solid fa-download"></i></a>
     </section>
 
     <!-- INTERESTS SECTION -->
@@ -154,6 +154,7 @@
                 <i class="fa-solid fa-mobile-screen-button"></i>
                 <h3>App Development</h3>
                 <p>More on programming.</p>
+                
                 <a href="#" class="btn">Read more</a>
             </div>
         </div>
