updated the SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brian - Full Stack Developer</title>
-    <meta name="description" content="Brian's Portfolio - Full Stack Developer specializing in modern web applications">
-    <!-- FONT-AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- GOOGLE FONTS -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="style.css">
+    <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brian Kimutai - Full Stack Developer</title>
+  <meta name="description" content="Brian Kimutai - Full Stack Developer specializing in modern web applications, MERN stack, and cloud solutions.">
+  <meta name="keywords" content="Brian Kimutai, Full Stack Developer, Web Developer, MERN, Portfolio, Software Engineer, Kenya">
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Brian Kimutai - Full Stack Developer">
+  <meta property="og:description" content="Explore my portfolio showcasing projects in MERN stack, Node.js, React, and modern web technologies.">
+  <meta property="og:image" content="https://brian-kimutai.vercel.app/112338.jpg">
+  <meta property="og:url" content="https://brian-kimutai.vercel.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Brian Kimutai - Full Stack Developer">
+  <meta name="twitter:description" content="Portfolio showcasing my skills and projects.">
+  <meta name="twitter:image" content="https://brian-kimutai.vercel.app/112338.jpg">
+
+  <!-- Structured Data (Schema.org JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Brian Kimutai",
+    "image": "https://brian-kimutai.vercel.app/112338.jpg",
+    "jobTitle": "Full Stack Developer",
+    "url": "https://yourdomain.vercel.app",
+    "sameAs": [
+      "https://github.com/Yobra28",
+      "https://www.linkedin.com/in/brian-kimutai-1057b22b6/",
+      "https://x.com/MkuuWao96066",
+      "https://www.instagram.com/call_me_yobra_/"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Nairobi",
+      "addressCountry": "Kenya"
+    }
+  }
+  </script>
+
+  <!-- FONT-AWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- GOOGLE FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
 </head>
 <body>
     <!-- HEADER SECTION -->
