updated the education section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,7 +170,7 @@
                         <i class="fas fa-school"></i>
                     </div>
                     <h3>Full Stack Development Cousre (4 month Powerlearn Project Scholarship internship)</h3>
-                    <p class="education-school">Teach2Give</p>
+                    <p class="education-school"> Powerlearn Project Scholarship</p>
                     <p class="education-year">February 2025 - August 2025</p>
                     <p class="education-description">
                         Certified Full Stack Developer with a strong foundation in problem-solving. Proficient in building dynamic, real-time applications with the MERN stack (MongoDB, Express.js, React, Node.js), Socket.io, and essential DevOps practices for streamlined deployment.
